--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
   <link href="connect4.css" rel="stylesheet">
 </head>
 <body>
-
+  <form id="playerform">
+    <input type="text" placeholder="player 1 color" id="1">
+    <input type="text" placeholder="player 2 color" id = '2'>
+    <button type="submit">Start Game</button>
+  </form>
 <div id="game">
   <table id="board"></table>
 </div>
 
-<script src="connect4.js"></script>
+<script src="connect4OO.js"></script>
 
 </body>
 </html>
