finished connect four OO

--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
   <link href="connect4.css" rel="stylesheet">
 </head>
 <body>
-  <form id="playerform">
     <input type="text" placeholder="player 1 color" id="1">
     <input type="text" placeholder="player 2 color" id = '2'>
-    <button type="submit">Start Game</button>
-  </form>
+    <button id="start">Start Game</button>
 <div id="game">
   <table id="board"></table>
 </div>
